fix UpdateComponent